Fix potential overflow bugs

--- a/styles/cta.css
+++ b/styles/cta.css
@@ -53,7 +53,7 @@
 
 .cta-section img{
     position: absolute;
-    top: 0;
+    top: -3px;
     left: -3px;
     width: 101vw;
     transform: rotate(180deg);
