--- a/styles/info.css
+++ b/styles/info.css
@@ -83,7 +83,7 @@
 
 /*quote section*/
 .quote-section{
-    width: 100vw;
+    max-width: 100vw;
     background: #1f2937;
     color: var(--sign-up-color);
     display: flex;
@@ -97,7 +97,7 @@
     display: flex;
     flex-direction: column;
     font-size: 1.75rem;
-    width: 800px;
+    width: 50vw;
     transform: translateY(50px);
 }
 
